그리드 스타일 수정

--- a/src/main/resources/templates/views/opn/usr/OPNUSR001M0.html
+++ b/src/main/resources/templates/views/opn/usr/OPNUSR001M0.html
@@ -1,53 +1,36 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 	<div class="page-wrapper" id="page-wrapper">
 		<div class="container" id="container">
-			<h2>Job List</h2>
+			<h2>[[${menuNm}]]</h2>
 			<div class="ptag-container">
-				<span><a href="#"> System Admin ></a></span>
-				<span><a href="#">Menu Management</a></span>
+				<span>[[${navigator}]]</span>
 				<div class="form-container">
 					<div class="form-box">
-						<form id="filter-form" name="form" method="post" action="/OPNUSR001M0SelectList"
-							onsubmit="return false;">
-							<div class="row">
-								<div class="col">
+						<form id="filter-form" name="form" method="post" action="/OPNUSR001M0SelectList" onsubmit="return false;">
+							<div class="row align-items-center">
+								<div class="col-auto">
 									<label class="form-label"> Menu Name: </label>
-									<input id="inpMenuNm" name="inpMenuNm" type="text" class="form-input-temp"
-										placeholder="Menu Korean/English" />
-									<br>
+									<input id="inpMenuNm" name="inpMenuNm" type="text" class="form-control p-1" placeholder="Menu Korean/English" />
+								</div>
+								<div class="col-auto">
 									<label class="form-label"> Menu Description: </label>
-									<input id="inpMenuDesc" name="inpMenuDesc" type="text" class="form-input-temp"
-										placeholder="Menu Description" />
-									<br>
+									<input id="inpMenuDesc" name="inpMenuDesc" type="text" class="form-control p-1" placeholder="Menu Description" />
+								</div>
+								<div class="col-auto">
 									<label class="form-label"> Program Name: </label>
-									<input id="inpPgmNm" name="inpPgmNm" type="text" class="form-input-temp"
-										placeholder="Program Name" />
-									<button type="button" class="btn btn-primary"
-										style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">
-										Search
-									</button>
+									<input id="inpPgmNm" name="inpPgmNm" type="text" class="form-control p-1" placeholder="Program Name" />
+								</div>
+								<div class="col-auto">
+									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
 								</div>
 								<div class="col text-end">
-									<button form="new-form" type="button" class="btn btn-primary"
-										style="padding: 4px 10px; color: white; font-size: 13px"
-										onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-										data-test="create-button" onsubmit="return false;">
-										Create
-									</button>
-									<button type="button" class="btn btn-lime"
-										style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">
-										Download
-									</button>
-									<button form="new-form" type="button" class="btn btn-secondary"
-										style="padding: 4px 10px; color: white; font-size: 13px"
-										onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-										data-test="edit-button" onsubmit="return false;">
-										Edit
-									</button>
+									<p style="height:27px;">&nbsp;</p>
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;">Create</button>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+									<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Edit</button>
 								</div>
 							</div>
 						</form>
@@ -59,17 +42,13 @@
 				</div>
 			</div>
 			<div class="popupDataForm">
-				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-					style="display: none">
-					Launch modal with form
-				</button>
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">Launch modal with form</button>
 				<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
 					<div class="modal-dialog modal-small" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title">New report</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal"
-									aria-label="Close"></button>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 							</div>
 							<div class="modal-body">
 								<div class="row">
@@ -83,10 +62,7 @@
 								</div>
 								<div class="col-auto me-0 p-1"></div>
 								<div class="col-auto m-0">
-									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal"
-										style="padding: 4px 10px; color: white; font-size: 13px">
-										Save changes
-									</a>
+									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px"> Save changes </a>
 								</div>
 							</div>
 						</div>
@@ -237,19 +213,19 @@
 		var selbox_cols = ["srvcCd", "adminAuthYn", "sysopAuthYn", "useYn", "delYn"]
 		var columns = [
 						//formatter: MenuIDFormatter,
-						{ id: "menuId", name: "Menu ID", field: "menuId", width: 100, sortable: true, editor: Slick.Editors.Text, formatter: MenuIDFormatter, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns" }
-					,	{ id: "menuNmKor", name: "Menu Name Korean", field: "menuNmKor", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", }
-					,	{ id: "menuNmEng", name: "Menu Name English", field: "menuNmEng", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", }
+						{ id: "menuId", name: "Menu ID", field: "menuId", width: 140, sortable: true, editor: Slick.Editors.Text, formatter: MenuIDFormatter, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
+					,	{ id: "menuNmKor", name: "Menu Name Korean", field: "menuNmKor", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"}
+					,	{ id: "menuNmEng", name: "Menu Name English", field: "menuNmEng", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"}
 					,	{ id: "upprMenuId", name: "Upper Menu ID", field: "upprMenuId", width: 100, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "menuSrtOrd", name: "Menu Sorted Order", field: "menuSrtOrd", width: 80, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "menuDesc", name: "Menu Description", field: "menuDesc", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", }
-					,	{ id: "pgmNm", name: "Program Name", field: "pgmNm", width: 100, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "pgmPathNm", name: "Program Path Name", field: "pgmPathNm", width: 100, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "srvcCd", name: "Service Code", field: "srvcCd", width: 60, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "adminAuthYn", name: "Admin Auth YN", field: "adminAuthYn", width: 50, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "sysopAuthYn", name: "SysOp AUth YN", field: "sysopAuthYn", width: 50, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "useYn", name: "Use YN", field: "useYn", width: 50, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-					,	{ id: "delYn", name: "Del YN", field: "delYn", width: 50, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "menuSrtOrd", name: "Menu Sorted Order", field: "menuSrtOrd", width: 140, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "menuDesc", name: "Menu Description", field: "menuDesc", width: 200, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"}
+					,	{ id: "pgmNm", name: "Program Name", field: "pgmNm", width: 150, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "pgmPathNm", name: "Program Path Name", field: "pgmPathNm", width: 150, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [createValidator, noWhitespaceValidator,]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "srvcCd", name: "Service Code", field: "srvcCd", width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "adminAuthYn", name: "Admin Auth YN", field: "adminAuthYn", width: 120, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "sysopAuthYn", name: "SysOp AUth YN", field: "sysopAuthYn", width: 120, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "useYn", name: "Use YN", field: "useYn", width: 80, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+					,	{ id: "delYn", name: "Del YN", field: "delYn", width: 80, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" },]) }, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 					,	{ id: "frstRegEmpNo", name: "Registrant", field: "frstRegEmpNo", width: 100, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 					,	{ id: "frstRegDtm", name: "Registration Date", field: "frstRegDtm", width: 120, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 					];
@@ -268,6 +244,7 @@
 					,	asyncEditorLoading: false
 					,	autoEdit: false
 					,	autoEditNewRow: false
+					,	rowHeight: 35
 					};
 
 		var newRowIds = 0;
@@ -284,23 +261,8 @@
 																}
 							};
 
-		function addSlickGridSomeStyling() {
-			const style = document.createElement("style");
-			style.innerHTML = `
-						.slick-header-columns { 
-							font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, 
-							sans-serif; font-size: 13px; 
-							}
-						.slick-cell {
-							font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-							font-size: 13px;
-							}
-					`;
-			document.head.appendChild(style);
-		}
 
 		function main() {
-			addSlickGridSomeStyling();
 			// 그리드 초기화 및 데이터 로드
 			console.log("Initializing SlickGrid...");
 			getList(
